insert album tracks at the correct place instead of at the end

Summary:
inserting the tracks not at the end fix the bug

detected by QAbstractItemModelTester which is really a nice tool

BUG: 406466

Test Plan: new test is OK, no regressions

Reviewers: #elisa, ngraham, astippich, jguidon

Differential Revision: https://phabricator.kde.org/D24271